--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           submodules: true
 
@@ -50,7 +50,7 @@ jobs:
         run: GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} BIN_EXT=${{ matrix.ext }} make build_production
 
       - name: Compress
-        if: ${{ ! (matrix.os == 'darwin' && matrix.arch 'arm64') }}
+        if: ${{ ! (matrix.os == 'darwin' && matrix.arch == 'arm64') }}
         run: GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} BIN_EXT=${{ matrix.ext }} make compress || true
 
       - name: Upload Artifacts
@@ -64,7 +64,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Download Artifacts
         uses: actions/download-artifact@v2
