Fix release flow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,30 +82,43 @@ jobs:
 #        run: GOOS=darwin GOARCH=${{ matrix.arch }} make compress || true
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: darwin-${{ matrix.arch }}
           path: ./bin/*
 
-  release:
+  bump-version:
+    runs-on: ubuntu-latest
     needs: [build-linux-windows, build-darwin]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Bump version and push tag
+        id: bump_version
+        uses: anothrNick/github-tag-action@1.26.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: patch
+
+  release:
+    needs: bump-version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Download Artifacts
         uses: actions/download-artifact@v2
         with:
           path: ./bin/
 
-      - name: Install gh CLI
-        run: sudo apt install -y gh
-
       - name: Create GitHub Release
-        run: |
-          VERSION=$(gh release list --limit 1 --json versionName | jq -r '.[0].versionName')
-          NEW_VERSION=$(echo $VERSION | awk -F. '{$NF = $NF + 1;} 1' OFS=.)
-          gh release create $NEW_VERSION ./bin/* --title "Release $NEW_VERSION" --notes "Release notes for $NEW_VERSION"
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ steps.bump_version.outputs.new_tag }}
+          release_name: Release ${{ steps.bump_version.outputs.new_tag }}
+          draft: false
+          prerelease: false
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
