--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,6 +90,8 @@ jobs:
   bump-version:
     runs-on: ubuntu-latest
     needs: [build-linux-windows, build-darwin]
+    outputs:
+      new_tag: ${{ steps.bump_version.outputs.new_version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -116,8 +118,8 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ steps.bump_version.outputs.new_tag }}
-          name: Release ${{ steps.bump_version.outputs.new_tag }}
+          tag_name: ${{ needs.bump_version.outputs.new_tag }}
+          name: Release ${{ needs.bump_version.outputs.new_tag }}
           draft: false
           prerelease: false
           files: |
