--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+  discussions: write
+
 jobs:
   build-linux-windows:
     runs-on: ubuntu-latest
@@ -91,14 +95,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-linux-windows, build-darwin]
     outputs:
-      new_tag: ${{ steps.bump_version.outputs.new_version }}
+      new_tag: ${{ steps.bump_version.outputs.new_tag }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Bump version and push tag
         id: bump_version
-        uses: anothrNick/github-tag-action@1.26.0
+        uses: anothrNick/github-tag-action@1.67.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: patch
