--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,9 +103,10 @@ jobs:
       - name: Bump version and push tag
         id: bump_version
         uses: anothrNick/github-tag-action@1.67.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: patch
+        env:
+          WITH_V: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
 
   release:
     needs: bump-version
